crates/parser/tests/cases/snapshots/cases__parse_ast__module_stmts.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(module_stmts), module::parse_module,\n           r#\"\npragma 0.5.0\n\nuse foo::bar::{\n    bing as bong,\n    food::*\n}\n\ntype X = Map<u8, u16>\n\npub fn double(x: u8) -> u8:\n    return x * 2\n\nfn secret() -> u8:\n    return 0xBEEF\n\ncontract A:\n    pub const x: u256 = 10\n\ncontract B:\n    pub x: X\n\"#)"

---
Node(
  kind: Module(
    body: [
      Pragma(Node(
        kind: Pragma(
          version_requirement: Node(
            kind: "0.5.0",
            span: Span(
              start: 8,
              end: 13,
            ),
          ),
        ),
        span: Span(
          start: 1,
          end: 13,
        ),
      )),
      Use(Node(
        kind: Use(
          tree: Node(
            kind: Nested(
              prefix: Node(
                kind: Path(
                  names: [
                    Node(
                      kind: "foo",
                      span: Span(
                        start: 19,
                        end: 22,
                      ),
                    ),
                    Node(
                      kind: "bar",
                      span: Span(
                        start: 24,
                        end: 27,
                      ),
                    ),
                  ],
                  trailing_delim: true,
                ),
                span: Span(
                  start: 19,
                  end: 29,
                ),
              ),
              children: [
                Node(
                  kind: Simple(
                    path: Node(
                      kind: Path(
                        names: [
                          Node(
                            kind: "bing",
                            span: Span(
                              start: 35,
                              end: 39,
                            ),
                          ),
                        ],
                        trailing_delim: false,
                      ),
                      span: Span(
                        start: 35,
                        end: 39,
                      ),
                    ),
                    rename: Some(Node(
                      kind: "bong",
                      span: Span(
                        start: 43,
                        end: 47,
                      ),
                    )),
                  ),
                  span: Span(
                    start: 35,
                    end: 47,
                  ),
                ),
                Node(
                  kind: Glob(
                    prefix: Node(
                      kind: Path(
                        names: [
                          Node(
                            kind: "food",
                            span: Span(
                              start: 53,
                              end: 57,
                            ),
                          ),
                        ],
                        trailing_delim: true,
                      ),
                      span: Span(
                        start: 53,
                        end: 59,
                      ),
                    ),
                  ),
                  span: Span(
                    start: 53,
                    end: 59,
                  ),
                ),
              ],
            ),
            span: Span(
              start: 61,
              end: 62,
            ),
          ),
        ),
        span: Span(
          start: 15,
          end: 62,
        ),
      )),
      TypeAlias(Node(
        kind: TypeAlias(
          name: Node(
            kind: "X",
            span: Span(
              start: 69,
              end: 70,
            ),
          ),
          typ: Node(
            kind: Generic(
              base: Node(
                kind: "Map",
                span: Span(
                  start: 73,
                  end: 76,
                ),
              ),
              args: Node(
                kind: [
                  TypeDesc(Node(
                    kind: Base(
                      base: "u8",
                    ),
                    span: Span(
                      start: 77,
                      end: 79,
                    ),
                  )),
                  TypeDesc(Node(
                    kind: Base(
                      base: "u16",
                    ),
                    span: Span(
                      start: 81,
                      end: 84,
                    ),
                  )),
                ],
                span: Span(
                  start: 76,
                  end: 85,
                ),
              ),
            ),
            span: Span(
              start: 73,
              end: 85,
            ),
          ),
        ),
        span: Span(
          start: 64,
          end: 85,
        ),
      )),
      Function(Node(
        kind: Function(
          is_pub: true,
          name: Node(
            kind: "double",
            span: Span(
              start: 94,
              end: 100,
            ),
          ),
          args: [
            Node(
              kind: Regular(RegularFunctionArg(
                name: Node(
                  kind: "x",
                  span: Span(
                    start: 101,
                    end: 102,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "u8",
                  ),
                  span: Span(
                    start: 104,
                    end: 106,
                  ),
                ),
              )),
              span: Span(
                start: 101,
                end: 106,
              ),
            ),
          ],
          return_type: Some(Node(
            kind: Base(
              base: "u8",
            ),
            span: Span(
              start: 111,
              end: 113,
            ),
          )),
          body: [
            Node(
              kind: Return(
                value: Some(Node(
                  kind: BinOperation(
                    left: Node(
                      kind: Name("x"),
                      span: Span(
                        start: 126,
                        end: 127,
                      ),
                    ),
                    op: Node(
                      kind: Mult,
                      span: Span(
                        start: 128,
                        end: 129,
                      ),
                    ),
                    right: Node(
                      kind: Num("2"),
                      span: Span(
                        start: 130,
                        end: 131,
                      ),
                    ),
                  ),
                  span: Span(
                    start: 126,
                    end: 131,
                  ),
                )),
              ),
              span: Span(
                start: 119,
                end: 131,
              ),
            ),
          ],
        ),
        span: Span(
          start: 87,
          end: 131,
        ),
      )),
      Function(Node(
        kind: Function(
          is_pub: false,
          name: Node(
            kind: "secret",
            span: Span(
              start: 136,
              end: 142,
            ),
          ),
          args: [],
          return_type: Some(Node(
            kind: Base(
              base: "u8",
            ),
            span: Span(
              start: 148,
              end: 150,
            ),
          )),
          body: [
            Node(
              kind: Return(
                value: Some(Node(
                  kind: Num("0xBEEF"),
                  span: Span(
                    start: 163,
                    end: 169,
                  ),
                )),
              ),
              span: Span(
                start: 156,
                end: 169,
              ),
            ),
          ],
        ),
        span: Span(
          start: 133,
          end: 169,
        ),
      )),
      Contract(Node(
        kind: Contract(
          name: Node(
            kind: "A",
            span: Span(
              start: 180,
              end: 181,
            ),
          ),
          fields: [
            Node(
              kind: Field(
                is_pub: true,
                is_const: true,
                name: Node(
                  kind: "x",
                  span: Span(
                    start: 197,
                    end: 198,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "u256",
                  ),
                  span: Span(
                    start: 200,
                    end: 204,
                  ),
                ),
                value: Some(Node(
                  kind: Num("10"),
                  span: Span(
                    start: 207,
                    end: 209,
                  ),
                )),
              ),
              span: Span(
                start: 187,
                end: 204,
              ),
            ),
          ],
          body: [],
        ),
        span: Span(
          start: 171,
          end: 204,
        ),
      )),
      Contract(Node(
        kind: Contract(
          name: Node(
            kind: "B",
            span: Span(
              start: 220,
              end: 221,
            ),
          ),
          fields: [
            Node(
              kind: Field(
                is_pub: true,
                is_const: false,
                name: Node(
                  kind: "x",
                  span: Span(
                    start: 231,
                    end: 232,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "X",
                  ),
                  span: Span(
                    start: 234,
                    end: 235,
                  ),
                ),
                value: None,
              ),
              span: Span(
                start: 227,
                end: 235,
              ),
            ),
          ],
          body: [],
        ),
        span: Span(
          start: 211,
          end: 235,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 235,
  ),
)
