crates/parser/tests/cases/snapshots/cases__parse_ast__ops_bit3.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(ops_bit3), expressions::parse_expr, \"a | b ^ c\")"

---
Node(
  kind: BinOperation(
    left: Node(
      kind: Name("a"),
      span: Span(
        start: 0,
        end: 1,
      ),
    ),
    op: Node(
      kind: BitOr,
      span: Span(
        start: 2,
        end: 3,
      ),
    ),
    right: Node(
      kind: BinOperation(
        left: Node(
          kind: Name("b"),
          span: Span(
            start: 4,
            end: 5,
          ),
        ),
        op: Node(
          kind: BitXor,
          span: Span(
            start: 6,
            end: 7,
          ),
        ),
        right: Node(
          kind: Name("c"),
          span: Span(
            start: 8,
            end: 9,
          ),
        ),
      ),
      span: Span(
        start: 4,
        end: 9,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 9,
  ),
)
