crates/parser/tests/cases/snapshots/cases__parse_ast__ops_bnot.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(ops_bnot), expressions::parse_expr, \"~x\")"

---
Node(
  kind: UnaryOperation(
    op: Node(
      kind: Invert,
      span: Span(
        start: 0,
        end: 1,
      ),
    ),
    operand: Node(
      kind: Name("x"),
      span: Span(
        start: 1,
        end: 2,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 2,
  ),
)
