crates/parser/tests/cases/snapshots/cases__parse_ast__pragma2.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(pragma2), module::parse_pragma, \"pragma 0.1.0-alpha\")"

---
Node(
  kind: Pragma(
    version_requirement: Node(
      kind: "0.1.0-alpha",
      span: Span(
        start: 7,
        end: 18,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 18,
  ),
)
