crates/parser/tests/cases/snapshots/cases__parse_ast__pub_type_def.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(pub_type_def), module::parse_module,\n           \"pub type X = Map<address, u256>\")"

---
Node(
  kind: Module(
    body: [
      TypeAlias(Node(
        kind: TypeAlias(
          name: Node(
            kind: "X",
            span: Span(
              start: 9,
              end: 10,
            ),
          ),
          typ: Node(
            kind: Generic(
              base: Node(
                kind: "Map",
                span: Span(
                  start: 13,
                  end: 16,
                ),
              ),
              args: Node(
                kind: [
                  TypeDesc(Node(
                    kind: Base(
                      base: "address",
                    ),
                    span: Span(
                      start: 17,
                      end: 24,
                    ),
                  )),
                  TypeDesc(Node(
                    kind: Base(
                      base: "u256",
                    ),
                    span: Span(
                      start: 26,
                      end: 30,
                    ),
                  )),
                ],
                span: Span(
                  start: 16,
                  end: 31,
                ),
              ),
            ),
            span: Span(
              start: 13,
              end: 31,
            ),
          ),
          pub_qual: Some(Span(
            start: 0,
            end: 3,
          )),
        ),
        span: Span(
          start: 0,
          end: 31,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 31,
  ),
)
